--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "firebase": "^12.2.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
